--- a/cafe_webpage.css
+++ b/cafe_webpage.css
@@ -1,6 +1,11 @@
 h1, h2, p {
     text-align: center;
 }
-body {
-    background-color: brown;
+/*body {
+    background-color: burlywood;
+}
+*/
+#menu {
+    width: 80%;
+    background-color: burlywood;
 }
