--- a/cafe_webpage.css
+++ b/cafe_webpage.css
@@ -5,7 +5,9 @@ h1, h2, p {
     background-color: burlywood;
 }
 */
-#menu {
+.menu {
     width: 80%;
     background-color: burlywood;
+    margin-left: auto;
+    margin-right: auto;
 }
