--- a/cafe_webpage.css
+++ b/cafe_webpage.css
@@ -11,3 +11,10 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
+.flavor {
+    text-align: left;
+}
+.price {
+    text-align: right;
+}
