--- a/cafe_webpage.css
+++ b/cafe_webpage.css
@@ -14,7 +14,12 @@ body {
 
 .flavor {
     text-align: left;
+    width: 50%;
 }
 .price {
     text-align: right;
+    width: 50%;
+}
+.item p {
+    display: inline-block;
 }
