--- a/cafe_webpage.css
+++ b/cafe_webpage.css
@@ -3,6 +3,7 @@ h1, h2, p {
 }
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+    font-family: sans-serif;
 }
 
 .menu {
@@ -11,6 +12,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
+    max-width: 500px;
 }
 
 .flavor, .dessert {
