changed some fonts

--- a/cafe_webpage.css
+++ b/cafe_webpage.css
@@ -26,3 +26,16 @@ body {
 .item p {
     display: inline-block;
 }
+h1, h2 {
+    font-family: Impac, serif;
+
+}
+h1 {
+    font-size: 40px;
+}
+h2 {
+    font-size: 30px;
+}
+.established {
+    font-style: italic;
+}
