--- a/cafe_webpage.css
+++ b/cafe_webpage.css
@@ -4,6 +4,7 @@ h1, h2, p {
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
     font-family: sans-serif;
+    padding: 20px;
 }
 
 .menu {
@@ -40,6 +41,7 @@ h2 {
     font-style: italic;
 }
 hr {
-    height: 3px;
+    height: 2px;
     background-color: brown;
+    border-color: brown;
 }
