added some overall changes

--- a/cafe_webpage.css
+++ b/cafe_webpage.css
@@ -36,6 +36,8 @@ h1, h2 {
 }
 h1 {
     font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 15px;
 }
 h2 {
     font-size: 30px;
@@ -53,3 +55,21 @@ hr {
 
 }
 /*FOOTER*/
+footer {
+    font-size: 14px;
+}
+a {
+    color: black;
+}
+a:visited {
+    color: black;
+}
+a:hover {
+    color: brown;
+}
+a:active {
+    color: brown;
+}
+.address {
+    margin-bottom: 5px;
+}
