--- a/colored_markers.css
+++ b/colored_markers.css
@@ -2,8 +2,20 @@ h1 {
     text-align: center;
 }
 .marker {
-    background-color: red;
     height: 25px;
     width: 200px;
+    margin: 10px auto;
 
+}
+.one {
+    background-color: red;
+}
+.two {
+    background-color: green;
+}
+.three {
+    background-color: blue;
+}
+.container {
+    background-color: rgb(0, 0, 0);
 }
