--- a/colored_markers.css
+++ b/colored_markers.css
@@ -7,14 +7,14 @@ h1 {
     margin: 10px auto;
 
 }
-.one {
-    background-color: rgb(255, 127, 0);
+.red {
+    background-color: rgb(255, 0, 0);
 }
-.two {
-    background-color: rgb(0, 255, 127);
+.green {
+    background-color: rgb(0, 0, 0);
 }
-.three {
-    background-color: rgb(255, 0, 255);
+.blue {
+    background-color: rgb(0, 0, 0);
 }
 .container {
     background-color: rgb(255, 255, 255);
