--- a/colored_markers.css
+++ b/colored_markers.css
@@ -8,13 +8,13 @@ h1 {
 
 }
 .red {
-    background-color: rgb(255, 0, 0);
+    background: linear-gradient(180deg, rgb(255, 0, 0) 0%, rgb(0, 255, 0) 50%, rgb(0, 0, 255) 100%)
 }
 .green {
-    background-color: rgb(0, 0, 0);
+    background-color: #007F00;
 }
 .blue {
-    background-color: rgb(0, 0, 0);
+    background-color: hsl(240, 100%, 50%);
 }
 .container {
     background-color: rgb(255, 255, 255);
