--- a/dasmoto'sArts.css
+++ b/dasmoto'sArts.css
@@ -1,9 +1,21 @@
-header {
+h1 {
     font-family: Helvetica;
     font-size: 100px;
     font-weight: bold;
     color: khaki;
+    background-image: url("https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg");
 
 
 
+}
+h2 {
+
+    font-family: Helvetica;
+    font-size: 32px;
+    font-weight: bold;
+    color: white;
+}
+
+.brushes {
+    float: left;
 }
