--- a/dasmoto'sArts.css
+++ b/dasmoto'sArts.css
@@ -4,7 +4,7 @@ h1 {
     font-weight: bold;
     color: khaki;
     background-image: url("https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg");
-
+    text-align: center;
 
 
 }
@@ -14,6 +14,7 @@ h2 {
     font-size: 32px;
     font-weight: bold;
     color: white;
+    background-color: lightgreen;
 }
 
 .brushes {
