--- a/dasmoto'sArts.css
+++ b/dasmoto'sArts.css
@@ -19,4 +19,27 @@ h2 {
 
 .brushes {
     float: left;
+    width: 200px;
+    margin: 0px 20px 20px 0px;
+}
+
+h3 {
+    font-family: Halvetica;
+    clear: both;
+    font-weight: bold;
+    color: black;
+    text-align: left;
+
+}
+
+p {
+    color: black;
+    text-align: left;
+}
+
+.text-blue {
+    color: blue;
+
+
+
 }
