--- a/dasmoto'sArts.css
+++ b/dasmoto'sArts.css
@@ -8,7 +8,7 @@ h1 {
 
 
 }
-h2 {
+.img-brush {
 
     font-family: Helvetica;
     font-size: 32px;
@@ -23,7 +23,7 @@ h2 {
     margin: 0px 20px 20px 0px;
 }
 
-h3 {
+.brush-description {
     font-family: Halvetica;
     clear: both;
     font-weight: bold;
@@ -38,8 +38,37 @@ p {
 }
 
 .text-blue {
+    font-family: Helvetica;
+    font-weight: bold;
     color: blue;
+}
+
+.frames-text {
+    font-family: Helvetica;
+    font-size: 32px;
+    font-weight: bold;
+    color: white;
+    background-color: lightcoral;
+}
+
+.frames-description {
+    color: black;
+    text-align: left;
+    font-family: Helvetica;
 
 
+
+}
+
+.frames-p {
+    color: black;
+    text-align: left;
+
+}
+
+.frames-price {
+    font-family: Helvetica;
+    font-weight: bold;
+    color: blue;
 
 }
