--- a/colored_markers.css
+++ b/colored_markers.css
@@ -8,10 +8,10 @@ h1 {
 
 }
 .red {
-    background: linear-gradient(180deg, rgb(122, 74, 14) 0%, rgb(245, 62, 113) 50%, rgb(162, 27, 27) 100%)
+    background: linear-gradient(180deg, rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
 }
 .green {
-    background-color: #007F00;
+    background: linear-gradient(180deg, #55680D, #71f53e, #116c31);
 }
 .blue {
     background-color: hsl(240, 100%, 50%);
