--- a/colored_markers.css
+++ b/colored_markers.css
@@ -8,13 +8,13 @@ h1 {
 
 }
 .red {
-    background: linear-gradient(180deg, rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
+    background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
 }
 .green {
-    background: linear-gradient(180deg, #55680D, #71f53e, #116c31);
+    background: linear-gradient(#55680D, #71f53e, #116c31);
 }
 .blue {
-    background-color: hsl(240, 100%, 50%);
+    background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
 }
 .container {
     background-color: rgb(255, 255, 255);
