--- a/colored_markers.css
+++ b/colored_markers.css
@@ -20,3 +20,10 @@ h1 {
     background-color: rgb(255, 255, 255);
     padding: 10px 0px;
 }
+
+.sleeve {
+    width: 110px;
+    height: 25px;
+    background-color: white;
+
+}
