--- a/colored_markers.css
+++ b/colored_markers.css
@@ -9,7 +9,8 @@ h1 {
 }
 .red {
     background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
-}
+    box-shadow: -5px -5px red;
+}   
 .green {
     background: linear-gradient(#55680D, #71f53e, #116c31);
 }
@@ -24,6 +25,17 @@ h1 {
 .sleeve {
     width: 110px;
     height: 25px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 50%);
+    border-left: 10px double rgba(0, 0, 0, 75%);
+}
+.cap {
+    width: 60px;
+    height: 25px;
+
+}
+
+.cap, .sleeve {
+    display: inline-block;
+
 
 }
