--- a/registration_form.css
+++ b/registration_form.css
@@ -24,6 +24,7 @@ form {
     max-width: 500px;
     min-width: 300px;
     width: 60vw;
+    padding-bottom: 2em;
 
 
 }
@@ -40,6 +41,7 @@ fieldset:last-of-type {
 input, textarea, select {
     width: 100%;
     margin: 10px 0 0 0;
+    min-height: 2em;
 
 }
 
@@ -53,4 +55,25 @@ input, textarea, select {
 input, textarea {
     background-color: #0a0a23;
     border: 1px solid #0a0a23;
+    color: #ffffff;
+}
+
+input[type="submit"] {
+    display: block;
+    width: 60%;
+    margin: 1em auto;
+    height: 2em;
+    font-size: 1.1rem;
+    background-color: #3b3b4f;
+    border-color: white;
+    min-width: 300px;
+
+}
+
+input[type="file"] {
+    padding: 1px 2px;
+}
+
+a {
+    color: #dfdfe2;
 }
